--- a/Sunduk.PWA/Components/VectorComponent.razor
+++ b/Sunduk.PWA/Components/VectorComponent.razor
@@ -7,7 +7,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 4</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_4.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -19,7 +19,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 8</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_8.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -31,7 +31,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 3</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_3.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -44,7 +44,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 5</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_5.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -56,7 +56,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 0 / 9</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_0-9.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -68,7 +68,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 7</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_7.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -81,7 +81,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 1</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_1.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -93,7 +93,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 6</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_6.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -105,7 +105,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 2</MudText>
                 </MudCardHeader>
-                <MudCardContent Class="pa-1">
+                <MudCardContent Class="pa-1 mx-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_2.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -117,8 +117,8 @@
 
 @code 
 {
-    readonly int _imgHeigth = 100;
-    readonly int _imgWidth = 100;
+    readonly int _imgHeigth = 130;
+    readonly int _imgWidth = 130;
 
     int? vector;
 }
