--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
-    <MudGrid Spacing="1" Class="pa-1">
+    <MudGrid Spacing="1" Class="pa-1" Justify="Justify.Center">
         <MudItem >
             <MudLink Href="/calculator" Underline="Underline.None">
                 <MudPaper Class="pa-6">
@@ -15,7 +15,7 @@
         </MudItem>
 
         <MudItem>
-            <MudLink Href="/nc" Underline="Underline.None">
+            <MudLink Href="/sunducam" Underline="Underline.None">
                 <MudPaper Class="pa-6">
                     <MudGrid Justify="Justify.Center">
                         <MudIcon Size="Size.Large" Icon="fas fa-digital-tachograph" />
