--- a/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
+++ b/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
@@ -1,35 +1,123 @@
-﻿<MudContainer>
-    <MudText Typo="Typo.body2">
-        Программирование обработки на современных станках с ЧПУ осуществляется на языке, который обычно называют языком ИСО (ISO) 7 бит, или языком G и М кодов. Коды с адресом G называемые подготовительными, а коды с адресом М - вспомогательными.
-    </MudText>
-    <MudSimpleTable Hover="true" Dense="true" Outlined=true Class="mx-0">
-    <thead>
-        <tr>
-            @foreach (var h in headings)
-            {
-                <th>@h</th>
-            }
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var row in rows)
-        {
-            <tr>
-                <td>@row.code</td>
-                <td>@row.description</td>
-            </tr>
-        }
-    </tbody>
-</MudSimpleTable>
+﻿<style>
+    td{padding-right: 20px}
+</style>
+<MudContainer>
+    <MudText Typo="Typo.body2">@info1</MudText>
+    <MudField Variant=Variant.Filled Label="Пример УП" DisableUnderLine=true>
+        <table style="font-family: 'Roboto Mono', monospace; font-size: small;">
+            <tbody>
+                <tr>
+                    <td>O0001;</td>
+                    <td>блок с номером УП</td>
+                </tr>
+                <tr>
+                    <td>.....;</td>
+                    <td>любой блок обработки</td>
+                </tr>
+                <tr>
+                    <td>.....;</td>
+                    <td>любой блок обработки</td>
+                </tr>
+                <tr>
+                    <td>.....;</td>
+                    <td>любой блок обработки</td>
+                </tr>
+                <tr>
+                    <td>.....;</td>
+                    <td>любой блок обработки</td>
+                </tr>
+                <tr>
+                    <td>M30;</td>
+                    <td>блок с командой окончания УП</td>
+                </tr>
+            </tbody>
+        </table>
+    </MudField>
+
+    <MudText Typo="Typo.body2">@info2</MudText>
+    <MudField Variant=Variant.Filled Label="Пример УП с модальными кодами" DisableUnderLine=true>
+        <table style="font-family: 'Roboto Mono', monospace; font-size: small;">
+            <tbody>
+                <tr>
+                    <td>G01 X_;</td>
+                    <td>включение и работа по модальному коду G01</td>
+                </tr>
+                <tr>
+                    <td>X_;</td>
+                    <td>продолжается работа по G01</td>
+                </tr>
+                <tr>
+                    <td>Z_;</td>
+                    <td>продолжается работа по G01</td>
+                </tr>
+                <tr>
+                    <td>X_;</td>
+                    <td>продолжается работа по G01</td>
+                </tr>
+                <tr>
+                    <td>G00 X_;</td>
+                    <td>включение и работа по модальному коду G00</td>
+                </tr>
+                <tr>
+                    <td>G04 X_;</td>
+                    <td>включение и работа по немодальному коду G04</td>
+                </tr>
+                <tr>
+                    <td>X_;</td>
+                    <td>продолжается работа по G00</td>
+                </tr>
+            </tbody>
+        </table>
+    </MudField>
+
+    <MudField Variant=Variant.Filled Label="Базовые коды программирования" DisableUnderLine=true>
+        <MudSimpleTable Hover="true" Dense="true" Outlined=true Square=true Elevation=0>
+            <thead>
+                <tr>
+                    @foreach (var h in headings)
+                    {
+                        <th>@h</th>
+                    }
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var row in rows)
+                {
+                    <tr>
+                        <td>@row.code</td>
+                        <td>@row.description</td>
+                    </tr>
+                }
+            </tbody>
+        </MudSimpleTable>
+    </MudField>
 </MudContainer>
 
-@code {
+@code 
+{
+    string info1 =
+        "\nПрограммирование обработки на станках с числовым программным управлением (ЧПУ) осуществляется на языке, который обычно называют языком ИСО (ISO) 7 бит, " +
+        "или языком G и М кодов. Коды с адресом G называемые подготовительными, а коды с адресом М - вспомогательными.\n" +
+        "Набор команд, по которым происходит обработка, называется управляющей программой (УП). В свою очередь, управляющая программа состоит из блоков, " +
+        "которые представляют собой набор различных кодов (G-кодов, M-кодов и пр), каждый блок завершается символом конца блока (EOB - End Of Block)";
+
+    string info2 = 
+        "\nG-коды разделяют на модальные, и немодальные (однократные).\n" + 
+        "Например: существует группа G-кодов отвечающая за осевое перемещение: G00, G01, G02, G03 - эти коды модальные и каждый из них будет работать пока не будет заменен другим, из этой же группы. " +
+        "Также существует немодальный код G04 - останавливающий выполнение УП на определенное время, он будет работать только в пределах одного блока." +
+        "";
+
+    string info3 =
+        "\nПод интерполяцией в данном контексте подразумевается движение инструмента по прямой линии или дуге." + 
+        "";
+
     string[] headings = { "Код", "Описание" };
     (string code, string description)[] rows = {
-        ("G00","Ускоренное перемещение - перемещение по прямой линии на ускоренной подаче"),
+        ("G00","Ускоренное перемещение – перемещение по прямой линии на ускоренной подаче"),
         ("G01","Линейная интерполяция – перемещение по прямой линии на указанной подаче"),
         ("G02","Круговая интерполяция по часовой стрелке – перемещение на подаче по дуге по часовой стрелке"),
         ("G03","Круговая интерполяция против часовой стрелки – перемещение на подаче по дуге против часовой стрелки"),
         ("G04","Задержка выполнения управляющией программы"),
+        ("G10","Задержка выполнения управляющией программы"),
     };
 }
