--- a/Sunduk.PWA/Shared/MainLayout.razor
+++ b/Sunduk.PWA/Shared/MainLayout.razor
@@ -1,6 +1,10 @@
 ﻿@inject IDialogService DialogService
 @inherits LayoutComponentBase
 
+<MudScrollToTop>
+    <MudFab Color="Color.Primary" Icon="@Icons.Filled.KeyboardArrowUp" />
+</MudScrollToTop>
+
 <MudDialogProvider />
 <MudSnackbarProvider />
 
