--- a/Sunduk.PWA/Pages/Knowledge.razor
+++ b/Sunduk.PWA/Pages/Knowledge.razor
@@ -1,15 +1,15 @@
-﻿@page "/knowledge"
+﻿@page "/knowledge/{article}"
 @using Sunduk.PWA.Components.Knowledge;
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
     <MudGrid>
         <MudItem xs=12 sm=6 md=4>
             <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Содержание">
-                <MudList Clickable="true" @bind-SelectedItem="selectedItem" @bind-SelectedValue="selectedValue">
-                    <MudListItem Icon="@Icons.Material.Filled.Info" Text="О разделе" Value="1"/>
+                <MudList Clickable="true" @bind-SelectedItem="selectedItem" @bind-SelectedValue="Article">
+                    <MudListItem Icon="@Icons.Material.Filled.Info" Text="О разделе" Value="@("about")"/>
                     <MudListItem Icon="@Icons.Material.Filled.Folder" Text="Программирование" InitiallyExpanded="true">
                         <NestedList>
-                            <MudListItem Icon="@Icons.Material.Filled.Info" Value="2">
+                            <MudListItem Icon="@Icons.Material.Filled.Info" Value="@("general-programming")">
                                 Общая информация
                             </MudListItem>
                             <MudListItem Icon="@Icons.Material.Filled.Info">
@@ -22,10 +22,10 @@
         </MudItem>
         <MudItem xs=12 sm=6 md=8>
             <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Информация" Class="px-0">
-                @switch (selectedValue ?? 0)
+                @switch (Article?.ToString())
             {
-                case 1: <AboutKnowledgeComponent/> break;
-                case 2: <GeneralPrograming/> break;
+                case "about": <AboutKnowledgeComponent/> break;
+                case "general-programming": <GeneralPrograming/> break;
             }
             </MudField>
         </MudItem>
@@ -35,6 +35,7 @@
 
 @code 
 {
+    [Parameter]
+    public string Article { get; set; } = "about";
     MudListItem selectedItem;
-    object selectedValue = 1;
 }
