--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -80,7 +80,7 @@
         </MudItem>
 
         <MudItem>
-            <MudLink Href="/knowledge" Underline="Underline.None">
+            <MudLink Href="/knowledge/about" Underline="Underline.None">
                 <MudPaper Class="pa-6">
                     <MudGrid Justify="Justify.Center">
                         <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Info" />
