--- a/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
+++ b/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
@@ -1,97 +1,91 @@
 ﻿<style>
-    td{padding-right: 20px}
+    .ex{padding-right: 20px; font-family: 'Roboto Mono', monospace; font-size: x-small;}
 </style>
-<MudContainer>
-    <MudText Typo="Typo.body2">@info1</MudText>
-    <MudField Variant=Variant.Filled Label="Пример УП" DisableUnderLine=true>
-        <table style="font-family: 'Roboto Mono', monospace; font-size: small;">
-            <tbody>
-                <tr>
-                    <td>O0001;</td>
-                    <td>блок с номером УП</td>
-                </tr>
-                <tr>
-                    <td>.....;</td>
-                    <td>любой блок обработки</td>
-                </tr>
-                <tr>
-                    <td>.....;</td>
-                    <td>любой блок обработки</td>
-                </tr>
-                <tr>
-                    <td>.....;</td>
-                    <td>любой блок обработки</td>
-                </tr>
-                <tr>
-                    <td>.....;</td>
-                    <td>любой блок обработки</td>
-                </tr>
-                <tr>
-                    <td>M30;</td>
-                    <td>блок с командой окончания УП</td>
-                </tr>
-            </tbody>
-        </table>
-    </MudField>
+<style>
+    .desc{font-style: italic; font-size: x-small;}
+</style>
 
-    <MudText Typo="Typo.body2">@info2</MudText>
-    <MudField Variant=Variant.Filled Label="Пример УП с модальными кодами" DisableUnderLine=true>
-        <table style="font-family: 'Roboto Mono', monospace; font-size: small;">
-            <tbody>
-                <tr>
-                    <td>G01 X_;</td>
-                    <td>включение и работа по модальному коду G01</td>
-                </tr>
-                <tr>
-                    <td>X_;</td>
-                    <td>продолжается работа по G01</td>
-                </tr>
-                <tr>
-                    <td>Z_;</td>
-                    <td>продолжается работа по G01</td>
-                </tr>
-                <tr>
-                    <td>X_;</td>
-                    <td>продолжается работа по G01</td>
-                </tr>
-                <tr>
-                    <td>G00 X_;</td>
-                    <td>включение и работа по модальному коду G00</td>
-                </tr>
-                <tr>
-                    <td>G04 X_;</td>
-                    <td>включение и работа по немодальному коду G04</td>
-                </tr>
-                <tr>
-                    <td>X_;</td>
-                    <td>продолжается работа по G00</td>
-                </tr>
-            </tbody>
-        </table>
-    </MudField>
+<MudText Typo="Typo.body2">@info1</MudText>
+<MudField Variant=Variant.Filled Label="Пример УП" DisableUnderLine=true>
+    <table>
+        <tbody>
+            <tr>
+                <td class=ex>O0001;</td>
+                <td class=desc>блок с номером УП</td>
+            </tr>
+            <tr>
+                <td class=ex>.....;</td>
+                <td class=desc>любой блок обработки</td>
+            </tr>
+            <tr>
+                <td class=ex>.....;</td>
+                <td class=desc>любой блок обработки</td>
+            </tr>
+            <tr>
+                <td class=ex>.....;</td>
+                <td class=desc>любой блок обработки</td>
+            </tr>
+            <tr>
+                <td class=ex>M30;</td>
+                <td class=desc>блок с командой окончания УП</td>
+            </tr>
+        </tbody>
+    </table>
+</MudField>
 
-    <MudField Variant=Variant.Filled Label="Базовые коды программирования" DisableUnderLine=true>
-        <MudSimpleTable Hover="true" Dense="true" Outlined=true Square=true Elevation=0>
-            <thead>
-                <tr>
-                    @foreach (var h in headings)
-                    {
-                        <th>@h</th>
-                    }
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var row in rows)
+<MudText Typo="Typo.body2">@info2</MudText>
+<MudField Variant=Variant.Filled Label="Пример УП с модальными кодами" DisableUnderLine=true>
+    <table>
+        <tbody>
+            <tr>
+                <td class=ex>G01 X_;</td>
+                <td class=desc>включение и работа по модальному коду G01</td>
+            </tr>
+            <tr>
+                <td class=ex>X_;</td>
+                <td class=desc>продолжается работа по модальному коду G01</td>
+            </tr>
+            <tr>
+                <td class=ex>Z_;</td>
+                <td class=desc>продолжается работа по модальному коду G01</td>
+            </tr>
+            <tr>
+                <td class=ex>G00 X_;</td>
+                <td class=desc>включение и работа по модальному коду G00</td>
+            </tr>
+            <tr>
+                <td class=ex>G04 X_;</td>
+                <td class=desc>включение и работа по немодальному коду G04</td>
+            </tr>
+            <tr>
+                <td class=ex>X_;</td>
+                <td class=desc>продолжается работа по модальному коду G00</td>
+            </tr>
+        </tbody>
+    </table>
+</MudField>
+
+<MudField Variant=Variant.Filled Label="Базовые коды программирования" DisableUnderLine=true>
+    <MudSimpleTable Hover="true" Dense="true" Outlined=true Square=true Elevation=0>
+        <thead>
+            <tr>
+                @foreach (var h in headings)
                 {
-                    <tr>
-                        <td>@row.code</td>
-                        <td>@row.description</td>
-                    </tr>
+                    <th>@h</th>
                 }
-            </tbody>
-        </MudSimpleTable>
-    </MudField>
-</MudContainer>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var row in rows)
+            {
+                <tr>
+                    <td>@row.code</td>
+                    <td>@row.description</td>
+                </tr>
+            }
+        </tbody>
+    </MudSimpleTable>
+</MudField>
 
 @code 
 {
