--- a/Sunduk.PWA/Pages/Knowledge.razor
+++ b/Sunduk.PWA/Pages/Knowledge.razor
@@ -2,13 +2,13 @@
 @using Sunduk.PWA.Components.Knowledge;
 
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
-    <MudGrid>
-        <MudItem xs=12 sm=6 md=4>
-            <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Содержание">
+<MudContainer MaxWidth=MaxWidth.False Class="mt-2">
+    <MudGrid Spacing=1>
+        <MudItem xs=12 sm=5 md=4 >
+            <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Содержание" InnerPadding="false">
                 <MudList Clickable="true" @bind-SelectedItem="selectedItem" @bind-SelectedValue="Article">
                     <MudListItem Icon="@Icons.Material.Filled.Info" Text="О разделе" Value="@("about")"/>
-                    <MudListItem Icon="@Icons.Material.Filled.Folder" Text="Программирование" InitiallyExpanded="true">
+                    <MudListItem Icon="@Icons.Material.Filled.Folder" Text="Программирование">
                         <NestedList>
                             <MudListItem Icon="@Icons.Material.Filled.Info" Value="@("general-programming")">
                                 Общая информация
@@ -21,8 +21,8 @@
                 </MudList>
             </MudField>
         </MudItem>
-        <MudItem xs=12 sm=6 md=8>
-            <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Информация" Class="px-0">
+        <MudItem xs=12 sm=7 md=8>
+            <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Информация">
                 @switch (Article?.ToString())
             {
                 case "about": <AboutKnowledgeComponent/> break;
@@ -37,6 +37,6 @@
 @code 
 {
     [Parameter]
-    public string Article { get; set; } = "about";
+    public object Article { get; set; } = "about";
     MudListItem selectedItem;
 }
