--- a/Sunduk.PWA/Shared/NavMenu.razor
+++ b/Sunduk.PWA/Shared/NavMenu.razor
@@ -6,5 +6,5 @@
     <MudNavLink Href="/stuff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.RoundedCorner">Всякая хрень</MudNavLink>
     <MudNavLink Href="/angle" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SignalCellularNull">Перевод углов</MudNavLink>
     <MudNavLink Href="/timecalc" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Timer">Расчеты времени</MudNavLink>
-    <MudNavLink Href="/knowledge" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">База знаний</MudNavLink>
+    <MudNavLink Href="/knowledge/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">База знаний</MudNavLink>
 </MudNavMenu>
