--- a/Sunduk.PWA/Components/Knowledge/ProgrammingG00.razor
+++ b/Sunduk.PWA/Components/Knowledge/ProgrammingG00.razor
@@ -1,5 +1,27 @@
-﻿<h3>ProgrammingG00</h3>
+﻿<style>
+    .ex{padding-right: 20px; font-family: 'Roboto Mono', monospace; font-size: x-small;}
+</style>
+<style>
+    .desc{font-style: italic; font-size: x-small;}
+</style>
 
-@code {
+<MudText Typo=Typo.body2>@description</MudText>
+<MudField Variant=Variant.Filled Label="Пример УП" DisableUnderLine=true>
+    <table>
+        <tbody>
+            <tr>
+                <td class=ex>G00 X_ Z_;</td>
+                <td class=desc>ускоренное перемещение по координатам X_ Z_</td>
+            </tr>
+        </tbody>
+    </table>
+</MudField>
 
+
+@code 
+{
+    string description = 
+    "Команда G00 перемещает инструмент на позицию, указанную относительно системы координат заготовки на скорости ускоренного подвода. Указание позиции допускается в абсолютных и относительных значениях. " + 
+    "Скорость ускоренного подвода для каждой оси задается в параметре системы ЧПУ №1420 и не может задаваться в адресе F." +
+    "";
 }
