--- a/Sunduk.PWA/Components/Knowledge/ProgrammingG01.razor
+++ b/Sunduk.PWA/Components/Knowledge/ProgrammingG01.razor
@@ -16,6 +16,7 @@
         </tbody>
     </table>
 </MudField>
+<MudText Typo=Typo.body2>@advancedDescription</MudText>
 
 
 @code 
@@ -26,5 +27,12 @@
     "Скорость подачи, заданная F-кодом, измеряется вдоль траектории движения инструмента, следовательно при движении по нескольким осям одновременно, " + 
     "скорость подачи для каждой оси пересчитывается для поддержания необходимой общей скорости подачи. " + 
     "Если F-код не задан, скорость подачи считается равной нулю. " +
+    "";
+
+    string advancedDescription = 
+    "Скорость подачи для линейных осей указывается в мм/об, либо в мм/мин, а для осей вращения в град/мин. " + 
+    "На токарных станках в оснвном используется подача в мм/об (детали), она включается G-кодом G99, а G98 включает подачу в мм/мин. " +
+    "На фрезерных станках в оснвном используется подача в мм/мин, она включается G-кодом G94, а G95 включает подачу в мм/об (инструмента). " + 
+    "скорость подачи для каждой оси пересчитывается для поддержания необходимой общей скорости подачи. " + 
     "";
 }
