--- a/Sunduk.PWA/App.razor
+++ b/Sunduk.PWA/App.razor
@@ -4,7 +4,11 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <div>
+                <p style="font-family: 'Saira Stencil One'; font-size: xx-large; color: #ff5722; position: absolute; top: 30vh; width: 80%; text-align: center" class=logo>
+                    4046
+                </p>
+            </div>
         </LayoutView>
     </NotFound>
 </Router>
