--- a/Sunduk.PWA/Components/RadiusComponent.razor
+++ b/Sunduk.PWA/Components/RadiusComponent.razor
@@ -131,8 +131,8 @@
             <MudExpansionPanel Class="mt-2" Text="Пример программы для Fanuc">
                 <MudItem xs="12" md="4">
                             <MudRadioGroup T="bool" @bind-SelectedOption="showClassicRadius" Class="ma-n3">
-                                <MudRadio Option="true" Color="Color.Primary">Обычная</MudRadio>
-                                <MudRadio Option="false" Color="Color.Primary">Обратная</MudRadio>
+                                <MudRadio Option="true" Color="Color.Primary">Обычное</MudRadio>
+                                <MudRadio Option="false" Color="Color.Primary">Обратное</MudRadio>
                             </MudRadioGroup>
                         </MudItem>
                 <MudItem xs="12">
