--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -71,7 +71,8 @@ https://github.com/dece1ver/Sunduk
             "Во всякую хрень добавил глубины центровых отверстий по ГОСТ 14034-74",
             "Изменил цветовую схему"
         }));
-
+        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 6), new DateTime(2021, 12, 14), new string[] { 
+            "Переписал фаску и радиус, добавил обратные варианты. На фаске добавил точный расчет."}));
         Info.Reverse();
     }
 
