--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -14,7 +14,7 @@
             </MudLink>
         </MudItem>
 
-        <MudItem>
+        @*<MudItem>
             <MudLink Href="/sunducam" Underline="Underline.None">
                 <MudPaper Class="pa-6">
                     <MudGrid Justify="Justify.Center">
@@ -25,7 +25,7 @@
                     </MudGrid>
                 </MudPaper>
             </MudLink>
-        </MudItem>
+        </MudItem>*@
 
         <MudItem>
             <MudLink Href="/thread" Underline="Underline.None">
@@ -66,7 +66,7 @@
             </MudLink>
         </MudItem>
 
-        <MudItem>
+        @*<MudItem>
             <MudLink Href="/timecalc" Underline="Underline.None">
                 <MudPaper Class="pa-6">
                     <MudGrid Justify="Justify.Center">
@@ -90,6 +90,6 @@
                     </MudGrid>
                 </MudPaper>
             </MudLink>
-        </MudItem>
+        </MudItem>*@
     </MudGrid>
 </MudContainer>
