--- a/Sunduk.PWA/Shared/NavMenu.razor
+++ b/Sunduk.PWA/Shared/NavMenu.razor
@@ -1,10 +1,10 @@
 ﻿
 <MudNavMenu>
     <MudNavLink Href="/calculator" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Calculate">Калькулятор режимов</MudNavLink>
-    @*<MudNavLink Href="/sunducam" Match="NavLinkMatch.Prefix" Icon="fas fa-digital-tachograph">SunduCAM</MudNavLink>*@
+    <MudNavLink Href="/sunducam" Match="NavLinkMatch.Prefix" Icon="fas fa-digital-tachograph">SunduCAM</MudNavLink>
     <MudNavLink Href="/thread" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LineWeight">Точение резьбы</MudNavLink>
     <MudNavLink Href="/stuff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.RoundedCorner">Всякая хрень</MudNavLink>
     <MudNavLink Href="/angle" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SignalCellularNull">Перевод углов</MudNavLink>
-    @*<MudNavLink Href="/timecalc" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Timer">Расчеты времени</MudNavLink>*@
-    @*<MudNavLink Href="/knowledge/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">База знаний</MudNavLink>*@
+    <MudNavLink Href="/timecalc" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Timer">Расчеты времени</MudNavLink>
+    <MudNavLink Href="/knowledge/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">База знаний</MudNavLink>
 </MudNavMenu>
